content/public/common/drop_data.cc
@@ -65,7 +65,8 @@ base::Optional<base::FilePath> DropData::GetSafeFilenameForImageFileContents()
   std::string mime_type;
   if (net::GetWellKnownMimeTypeFromExtension(file_contents_filename_extension,
                                              &mime_type) &&
-      blink::IsSupportedImageMimeType(mime_type)) {
+      base::StartsWith(mime_type, "image/",
+                       base::CompareCase::INSENSITIVE_ASCII)) {
     return file_name.ReplaceExtension(file_contents_filename_extension);
   }
   return base::nullopt;
